--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DbConn" : "Data Source=(local); Initial Catalog=AjaxExample; Trusted_Connection=True; TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
